[fix] Prevents table overflow by using text-overflow: ellipsis and adding a tooltip to read full value

--- a/front-end/src/app/statistics/components/statistics-detail/statistics-detail.component.css
+++ b/front-end/src/app/statistics/components/statistics-detail/statistics-detail.component.css
@@ -1,5 +1,12 @@
 .table {
+  table-layout: fixed;
+  /* word-wrap: break-word; */
+}
+
+th, td {
+  white-space: nowrap;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @keyframes dotloader1{
